--- a/JKDemoApp/Base.lproj/Main.storyboard
+++ b/JKDemoApp/Base.lproj/Main.storyboard
@@ -52,6 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="93" y="185.25"/>
         </scene>
     </scenes>
 </document>
